src/objects/Compliance__c.object
<CustomObject>
    <description>LPAM - A Compliance Object for an LPAM Project</description>
    <fields>
        <fullName>AMI_Units__c</fullName>
        <label>AMI Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>25%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>35%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>45%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>55%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>65%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>75%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Market</fullName>
                </value>
                <value>
                    <fullName>Restricted</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Compliance_Information__c</fullName>
        <description>The Compliance Information object</description>
        <label>Loan Portfolio Asset Project</label>
        <referenceTo>Loan_Project__c</referenceTo>
        <relationshipName>LPAM_Compliances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Number_Meeting_Criteria__c</fullName>
        <description>Number of Beds for this LPAM Project</description>
        <inlineHelpText>Enter the Number of Beds</inlineHelpText>
        <label>Number Meeting Criteria</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Units__c</fullName>
        <label>Number Of Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <label>Unit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beds</fullName>
                </value>
                <value>
                    <fullName>SRO</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>1 Bedroom</fullName>
                </value>
                <value>
                    <fullName>2 Bedroom</fullName>
                </value>
                <value>
                    <fullName>3 Bedroom</fullName>
                </value>
                <value>
                    <fullName>4 Bedroom</fullName>
                </value>
                <value>
                    <fullName>5 Bedroom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Compliance</label>
    <nameField>
        <displayFormat>CMPL-{00000}</displayFormat>
        <label>ComplianceID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>